# Mosaic

./: .gitignore  .mosaic-ec2-ip  .mosaic-instance-id  404.html  FRONTEND_POLISH_UX_PLAN.md  IMPLEMENTATION_PLAN.md  Project name and description.txt  README.md  UX_AUDIT_REPORT.md  index.html  mosaic-run-watts_strogatz_42_45.csv  mosaic-run-watts_strogatz_42_45.json  phase5.5_validation_plan.md  pyproject.toml  pyrightconfig.json  requirements-ci.txt  requirements.txt  research-report-1.md  research-report-2.md  tokens.json
.github/workflows/: ci.yml  deploy.yml  pages.yml
analysis/: _umap_compat.py  clustering.py  data_loader.py  evaluate.py  gcn.py  umap_viz.py  validation.py
api/: main.py  schemas.py
assets/: AnalysisPage--UTyzJrk.js  AnalysisPage-2zci2Dfb.js  AnalysisPage-5gdrplsn.js  AnalysisPage-BJjbsbTB.js  AnalysisPage-BQTQ0yq6.js  AnalysisPage-BfG6-SaS.js  AnalysisPage-BhUizKHm.js  AnalysisPage-BqCAgn10.js  AnalysisPage-C-dGCuCA.js  AnalysisPage-CBQXjTSA.js  AnalysisPage-CFZ7Xwig.js  AnalysisPage-CJ7j43ms.js  AnalysisPage-CP3x9-aX.js  AnalysisPage-CaXgCc8p.js  AnalysisPage-CeoDFr52.js  AnalysisPage-CkIBIPPa.js  AnalysisPage-Cp1PG08m.js  AnalysisPage-CsIs8n_y.js  AnalysisPage-CyquGEQ6.js  AnalysisPage-DGbEiEY5.js  AnalysisPage-DK1A85lg.js  AnalysisPage-DSzUH5o8.js  AnalysisPage-DYpUakEl.js  AnalysisPage-DkPlVv-K.js  AnalysisPage-DqpCY6oo.js  AnalysisPage-FTUExEvd.js  AnalysisPage-Snoyg-QR.js  AnalysisPage-chGwUmsA.js  AnalysisPage-qRX1QIzq.js  AnalysisPage-s5S4DU1J.js  AnalysisPage-viYN-6JZ.js  ComparePage-B2C8uugY.js  ComparePage-BB2yv7bk.js  ComparePage-BYAUY7vq.js  ComparePage-Bd34k3aG.js  ComparePage-Bk02px--.js  ComparePage-Brp75KEC.js  ComparePage-C1Q1Rwmv.js  ComparePage-C8AMZtOy.js  ComparePage-CDILHTvh.js  (+286 more)
deploy/: DEPLOYMENT.md  deploy.sh  mosaic-api.service  nginx.conf  userdata.sh
docs/: research-report-3.md
experiments/: ablations.py  exp1_topology.py  exp2_prestige.py  exp3_contact.py  heatmaps.py  run_all.py  scurve.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: AnalysisPage.test.tsx  ComparePage.test.tsx  ControlPanel.test.tsx  Dashboard.test.tsx  ExperimentsPage.test.tsx
frontend/src/api/: client.ts
frontend/src/components/core/: Badge.tsx  (+7 more)
frontend/src/constants/: presets.ts
frontend/src/contexts/: SimulationContext.tsx
frontend/src/hooks/: useD3Network.ts  useD3Scatter.ts  useResizeObserver.ts
frontend/src/layouts/: MainLayout.tsx  Sidebar.tsx
frontend/src/pages/: AnalysisPage.tsx  ComparePage.tsx  Dashboard.tsx  ExperimentsPage.tsx  GuidePage.tsx  LandingPage.tsx
frontend/src/styles/: accessibility.css  base.css  components.css  landing.css  layout.css  misc.css  motion.css  navbar.css  tokens.css
frontend/src/test/: setup.ts
frontend/src/types/: models.d.ts  models.ts
frontend/src/utils/: capture.ts  colorScales.ts
notebooks/: demo.ipynb
project-docs/: architecture.md  context.md  design.md  experiments.md  frontend-implementation-plan.md  ml-pipeline.md  model.md  mvp.md  phase5.5_validation_walkthrough.md  prd.md  progress.md  research_critique.md  tasks.md
results/: ml_results.json
simulation/: agent.py  config.py  logger.py  metrics.py  model.py  network.py  runner.py
tests/: test_agent.py  test_api.py  test_api_simulation_integrity.py  test_config.py  test_golden_master.py  test_interactions.py  test_metrics.py  test_model.py  test_network.py
tests/fixtures/: golden_master_sbm_9999.json
viz/: figures.py  gif.py
(+40 files in other folders)
