[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mosaic"
version = "0.1.0"
description = "Simulation framework for studying accent and dialect evolution in socially-structured populations"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["agent-based-model", "linguistics", "network-science", "sociolinguistics"]

[tool.setuptools.packages.find]
where = ["."]
include = ["simulation*", "experiments*", "viz*", "analysis*", "api*"]

# ---------------------------------------------------------------------------
# pytest configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow — run with 'pytest -m slow' or skip with 'pytest -m not slow'",
    "integration: marks end-to-end integration tests that require run outputs",
]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# Coverage (optional — run with: pytest --cov=simulation --cov-report=term)
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["simulation", "experiments", "viz", "analysis", "api"]
omit = ["tests/*", "notebooks/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

# ---------------------------------------------------------------------------
# Pyrefly (type checker) — point to the system Python where packages live
# ---------------------------------------------------------------------------
[tool.pyrefly]
python_interpreter = "C:/Program Files/Python312/python.exe"
search_path = [
  "C:/Users/omen/AppData/Roaming/Python/Python312/site-packages",
  "C:/Program Files/Python312/Lib/site-packages",
]
